# openapi/autogenerated/server-gen.go
@@ -2,7 +2,7 @@
 
 // Package autogenerated provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package autogenerated
 
 import (
@@ -21,6 +21,26 @@ const (
 	BearerJWTScopes = "BearerJWT.Scopes"
 )
 
+// Defines values for Permissions.
+const (
+	CreateSecret Permissions = "CreateSecret"
+	DeleteSecret Permissions = "DeleteSecret"
+	FullSecret   Permissions = "FullSecret"
+	GetSecret    Permissions = "GetSecret"
+	UpdateSecret Permissions = "UpdateSecret"
+)
+
+// ApiKeyCreated Response object returned after creating an API Key.
+// Return the API Key.
+type ApiKeyCreated struct {
+	Apikey *string `json:"apikey,omitempty"`
+}
+
+// ApiKeyRequest TODO:
+type ApiKeyRequest struct {
+	Permissions *[]Permissions `json:"permissions"`
+}
+
 // Error Represents an error returned by the API.
 // Contains the HTTP status code and a human-readable message.
 type Error struct {
@@ -31,6 +51,9 @@ type Error struct {
 	Status *int `json:"status,omitempty"`
 }
 
+// Permissions defines model for Permissions.
+type Permissions string
+
 // Secret defines model for Secret.
 type Secret struct {
 	// Content => Secret content
@@ -40,16 +63,16 @@ type Secret struct {
 	CreatedAt *time.Time `json:"created_at,omitempty"`
 
 	// Duration => Seconds left before auto deleting the secret
-	Duration int `json:"duration"`
+	Duration *int `json:"duration"`
 
 	// Id Unique identifier of the secret
 	Id *openapi_types.UUID `json:"id,omitempty"`
 
 	// Password => Password to access the secret
-	Password *string `json:"password,omitempty"`
+	Password *string `json:"password"`
 
 	// Views => Remaining views before deleting the secret
-	Views int `json:"views"`
+	Views *int `json:"views"`
 }
 
 // SecretCreated Response object returned after creating a secret.
@@ -66,13 +89,13 @@ type SecretRequest struct {
 	Content string `json:"content"`
 
 	// Duration => Seconds left before auto deleting the secret
-	Duration int `json:"duration"`
+	Duration *int `json:"duration"`
 
 	// Password => Password to access the secret
-	Password *string `json:"password,omitempty"`
+	Password *string `json:"password"`
 
 	// Views => Remaining views before deleting the secret
-	Views int `json:"views"`
+	Views *int `json:"views"`
 }
 
 // GetSecretJSONBody defines parameters for GetSecret.
@@ -87,6 +110,9 @@ type CreateSecretJSONRequestBody = SecretRequest
 // GetSecretJSONRequestBody defines body for GetSecret for application/json ContentType.
 type GetSecretJSONRequestBody GetSecretJSONBody
 
+// GenerateApiKeyJSONRequestBody defines body for GenerateApiKey for application/json ContentType.
+type GenerateApiKeyJSONRequestBody = ApiKeyRequest
+
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 	// Create a secret
@@ -98,6 +124,12 @@ type ServerInterface interface {
 	// Retrieve a secret
 	// (GET /secret/{id})
 	GetSecret(w http.ResponseWriter, r *http.Request, id openapi_types.UUID)
+	// Generate an API Key
+	// (POST /user/api-key)
+	GenerateApiKey(w http.ResponseWriter, r *http.Request)
+	// Delete an API Key
+	// (DELETE /user/api-key/{id})
+	DeleteApiKey(w http.ResponseWriter, r *http.Request, id openapi_types.UUID)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -182,6 +214,57 @@ func (siw *ServerInterfaceWrapper) GetSecret(w http.ResponseWriter, r *http.Requ
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetSecret(w, r, id)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// GenerateApiKey operation middleware
+func (siw *ServerInterfaceWrapper) GenerateApiKey(w http.ResponseWriter, r *http.Request) {
+
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, BearerJWTScopes, []string{})
+
+	r = r.WithContext(ctx)
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GenerateApiKey(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// DeleteApiKey operation middleware
+func (siw *ServerInterfaceWrapper) DeleteApiKey(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "id" -------------
+	var id openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", r.PathValue("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "id", Err: err})
+		return
+	}
+
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, BearerJWTScopes, []string{})
+
+	r = r.WithContext(ctx)
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.DeleteApiKey(w, r, id)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -314,6 +397,8 @@ func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.H
 	m.HandleFunc("POST "+options.BaseURL+"/secret", wrapper.CreateSecret)
 	m.HandleFunc("DELETE "+options.BaseURL+"/secret/{id}", wrapper.DeleteSecret)
 	m.HandleFunc("GET "+options.BaseURL+"/secret/{id}", wrapper.GetSecret)
+	m.HandleFunc("POST "+options.BaseURL+"/user/api-key", wrapper.GenerateApiKey)
+	m.HandleFunc("DELETE "+options.BaseURL+"/user/api-key/{id}", wrapper.DeleteApiKey)
 
 	return m
 }
@@ -438,6 +523,71 @@ func (response GetSecret410JSONResponse) VisitGetSecretResponse(w http.ResponseW
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GenerateApiKeyRequestObject struct {
+	Body *GenerateApiKeyJSONRequestBody
+}
+
+type GenerateApiKeyResponseObject interface {
+	VisitGenerateApiKeyResponse(w http.ResponseWriter) error
+}
+
+type GenerateApiKey201JSONResponse ApiKeyCreated
+
+func (response GenerateApiKey201JSONResponse) VisitGenerateApiKeyResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(201)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GenerateApiKey400JSONResponse Error
+
+func (response GenerateApiKey400JSONResponse) VisitGenerateApiKeyResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(400)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GenerateApiKey401Response = UnauthorizedAccessErrorResponse
+
+func (response GenerateApiKey401Response) VisitGenerateApiKeyResponse(w http.ResponseWriter) error {
+	w.WriteHeader(401)
+	return nil
+}
+
+type DeleteApiKeyRequestObject struct {
+	Id openapi_types.UUID `json:"id"`
+}
+
+type DeleteApiKeyResponseObject interface {
+	VisitDeleteApiKeyResponse(w http.ResponseWriter) error
+}
+
+type DeleteApiKey204Response struct {
+}
+
+func (response DeleteApiKey204Response) VisitDeleteApiKeyResponse(w http.ResponseWriter) error {
+	w.WriteHeader(204)
+	return nil
+}
+
+type DeleteApiKey401Response = UnauthorizedAccessErrorResponse
+
+func (response DeleteApiKey401Response) VisitDeleteApiKeyResponse(w http.ResponseWriter) error {
+	w.WriteHeader(401)
+	return nil
+}
+
+type DeleteApiKey404JSONResponse Error
+
+func (response DeleteApiKey404JSONResponse) VisitDeleteApiKeyResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(404)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Create a secret
@@ -449,6 +599,12 @@ type StrictServerInterface interface {
 	// Retrieve a secret
 	// (GET /secret/{id})
 	GetSecret(ctx context.Context, request GetSecretRequestObject) (GetSecretResponseObject, error)
+	// Generate an API Key
+	// (POST /user/api-key)
+	GenerateApiKey(ctx context.Context, request GenerateApiKeyRequestObject) (GenerateApiKeyResponseObject, error)
+	// Delete an API Key
+	// (DELETE /user/api-key/{id})
+	DeleteApiKey(ctx context.Context, request DeleteApiKeyRequestObject) (DeleteApiKeyResponseObject, error)
 }
 
 type StrictHandlerFunc = strictnethttp.StrictHTTPHandlerFunc
@@ -563,6 +719,63 @@ func (sh *strictHandler) GetSecret(w http.ResponseWriter, r *http.Request, id op
 		sh.options.ResponseErrorHandlerFunc(w, r, err)
 	} else if validResponse, ok := response.(GetSecretResponseObject); ok {
 		if err := validResponse.VisitGetSecretResponse(w); err != nil {
+			sh.options.ResponseErrorHandlerFunc(w, r, err)
+		}
+	} else if response != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
+	}
+}
+
+// GenerateApiKey operation middleware
+func (sh *strictHandler) GenerateApiKey(w http.ResponseWriter, r *http.Request) {
+	var request GenerateApiKeyRequestObject
+
+	var body GenerateApiKeyJSONRequestBody
+	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
+		sh.options.RequestErrorHandlerFunc(w, r, fmt.Errorf("can't decode JSON body: %w", err))
+		return
+	}
+	request.Body = &body
+
+	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
+		return sh.ssi.GenerateApiKey(ctx, request.(GenerateApiKeyRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GenerateApiKey")
+	}
+
+	response, err := handler(r.Context(), w, r, request)
+
+	if err != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, err)
+	} else if validResponse, ok := response.(GenerateApiKeyResponseObject); ok {
+		if err := validResponse.VisitGenerateApiKeyResponse(w); err != nil {
+			sh.options.ResponseErrorHandlerFunc(w, r, err)
+		}
+	} else if response != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
+	}
+}
+
+// DeleteApiKey operation middleware
+func (sh *strictHandler) DeleteApiKey(w http.ResponseWriter, r *http.Request, id openapi_types.UUID) {
+	var request DeleteApiKeyRequestObject
+
+	request.Id = id
+
+	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
+		return sh.ssi.DeleteApiKey(ctx, request.(DeleteApiKeyRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "DeleteApiKey")
+	}
+
+	response, err := handler(r.Context(), w, r, request)
+
+	if err != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, err)
+	} else if validResponse, ok := response.(DeleteApiKeyResponseObject); ok {
+		if err := validResponse.VisitDeleteApiKeyResponse(w); err != nil {
 			sh.options.ResponseErrorHandlerFunc(w, r, err)
 		}
 	} else if response != nil {
